# scalpel-free-proxy-list

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.yaml  scalpel-free-proxy-list.cabal
src/Text/HTML/Scalpel/: FreeProxyList.hs
test/: Test.hs
